assets/css/style.css
html, body {
	font-family: "Open Sans", sans-serif;
	font-weight: 700;
	background-color: #f4f4f4;
}

h3 {
	font-size: 27px;
}

p {
	margin: 16px 0;
    font-size: 13px;
}

a {
	color: inherit;
	text-decoration: none;
}

.main-container {
	width: 100%;
}

.sidebar {
	position: fixed;
	width: 200px;
	background-color: #191919;
	height: 100vh;
	color: white;
	transition: margin-left .5s;
}

.toggle {
	display: none;
}

.title {
	margin: 35px 0 39px;
	font-weight: 700;
	text-align: center;
}

.tags {
    width: 200px;
	height: 75vh;
	margin-top: 15vh;
	position: fixed;
	overflow-y: auto;
	z-index: 10;
	transition: .5s;
}

.tags::-webkit-scrollbar {
	width: 6px;
}
 
.tags::-webkit-scrollbar-thumb {
  background-color: #797979;
  border-radius:20px;
}

.tags::-webkit-scrollbar-track {
	background-color:#484848;
	border-radius: 20px;
}

.tags p {
	transition: 0.3s;
}

.gif-tags{
	position: relative;
}

.gif-button {
	text-transform: uppercase;
	font-size: 13px;
	letter-spacing: 0.5px;
	color: #b1b1b1;
	padding: 0 25px 0 40px;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.gif-button:hover {
	cursor: pointer;
	color: white;
}

.active {
	color: white;
}

.selector {
    top: 0px;
    left: 0;
    border-top: 7px solid transparent;
    border-bottom: 7px solid transparent;
    border-left: 11px solid white;
	position: absolute;
}

.gif-content {
	width: calc(100% - 200px);
	float: right;
	margin-top: 25px;
}

.search-bar {
	margin: 0 60px;
}

.search-container {
	width: 570px;
    padding: 10px 25px;
    border-radius: 23px;
    background-color: #e5e5e5;
}

.search-container i {
	color: #888888;
    font-size: 12px;
    margin-right: 11px;
}

.input-bar {
    background-color: #e5e5e5;
    border: 0;
    font-weight: 600;
    height: 24px;
    letter-spacing: 0.2px;
	width: 95%;
	color: #191919;
}

.input-bar:focus, .input-bar:active {
	outline: none;
}

.submit {
	display: none;
}

.gif-area {
	display: flex;
	flex-wrap: wrap;
	margin: 23px 50px 35px;
}

.gif {
	width: calc(33.333% - 40px);
	height: 250px;
    margin: 10px;
    padding: 10px;
    background-color: white;
	box-shadow: 3px 3px 9px rgba(141,141,141,0.1);
	position: relative;
}

.gif-image {
	height: 100%;
	width: 100%;
	object-fit: cover;
}

.gif:hover {
	cursor: pointer;
}

.icon-center {
	display: flex;
	align-items: center;
	justify-content: center;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	position: absolute;
}

.play-container {
    padding: 19px 16px;
    background-color: rgba(255,255,255,0.9);
    border-radius: 50px;
}

.play-icon {
	border-top: 10px solid transparent;
    border-bottom: 10px solid transparent;
    border-left: 18px solid black;
    margin-left: 7px;
}

.rating {
	position: absolute;
	text-transform: uppercase;
    top: 16px;
    right: 15px;
    font-size: 11px;
    padding: 5px 8px;
    background-color: rgba(255,255,255,0.9);
}

@media screen and (max-width: 1050px) {
	.gif {
		width: calc(50% - 40px);
	}
}

@media screen and (max-width: 957px) {
	.search-container {
		width: 100%;
		box-sizing: border-box;
	}
	.input-bar {
		width: 90%;
	}
}

@media screen and (max-width: 922px) {
	.gif {
		height: 215px;
	}
}

@media screen and (max-width: 840px) {
	.gif {
		height: 180px;
	}
}

@media screen and (max-width: 785px) {
	.gif {
		width: calc(100% - 40px);
		height: 300px;
	}
	.rating {
		top: 17px;
		right: 17px;
		font-size: 13px;
		padding: 6px 13px;
	}
}

@media screen and (max-width: 660px) {
	.sidebar {
		width: 100%;
		height: auto;
		padding: 26px 0;
		display: flex;
		align-items: center;
		justify-content: center;
		z-index: 100;
	}
	.toggle {
		display: block;
		font-size: 23px;
		left: 48px;
		top: 30px;
		position: absolute;
	}
	.toggle:hover {
		cursor: pointer;
	}
	.title {
		margin: 0;
	}
	.tags {
		display: none;
		background-color: #191919;
		margin-top: 0;
		padding-top: 25px;
		height: 100vh;
		z-index: 100;
	}
	.gif-content {
		width: 100%;
		margin-top: 110px;
	}
	.search-bar {
		margin: 0 40px;
	}
	.gif-area {
		margin: 23px 35px 35px;
	}
	.gif {
		height: 350px;
	}
}

@media screen and (max-width: 414px) {
	.gif {
		height: 280px;
	}
}

